feat: CRUD(transactions, emails, files, users)
